Compiler/src/main/java/Testing/Tests/SemanticTests/passing/ValidHeritance.ru
/? Descripción: caso de prueba que verifica que una herencia sea valida
/? Salida esperada:
/? El json construido correctamente

struct A{
pri Int a;
Array Bool b;}
impl A{
.(){}}

struct B : A{
Int hola;}
impl B{
st fn chau(Int b) -> Char{}
}

start{}